# opencv_test

./: .gitignore  CMakeLists.txt  README.md  cbr.sh  configure.sh
ex_01/: CmakeLists.txt  Makefile  build.sh  cbr.sh  main.cxx  run.sh  stage.txt
